# mitsein

./: CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: analyze.yml  continuous-integration.yml  document.yml  feature-powerset.yml  format.yml  lint.yml  release.yml  test.yml
src/: array1.rs  array_vec1.rs  borrow1.rs  boxed1.rs  btree_map1.rs  btree_set1.rs  cmp.rs  cmp1.rs  error.rs  except.rs  facet.rs  hash.rs  hash_set1.rs  index_map1.rs  index_set1.rs  iter1.rs  lib.rs  ops1.rs  option1.rs  parallel.rs  range1.rs  rc1.rs  reshape.rs  rkyv.rs  schemars.rs  segment.rs  serde.rs  slice1.rs  small_vec1.rs  str1.rs  string1.rs  sync1.rs  take.rs  vec1.rs  vec_deque1.rs
src/heapless/: mod.rs  vec1.rs
src/safety/: checked.rs  mod.rs  unchecked.rs
src/segment/: mod.rs  range.rs
src/segment/range/: index.rs  item.rs  mod.rs  trim.rs
src/subset/: keyed.rs  mod.rs  unordered.rs
src/subset/ordered/: mod.rs
src/subset/ordered/range/: index.rs  item.rs  mod.rs
src/subset/ranged/: mod.rs
src/subset/ranged/range/: index.rs  item.rs  mod.rs  trim.rs
