[package]
name = "mitsein"
version = "0.5.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Strongly typed APIs for non-empty collections, slices, and iterators."
repository = "https://github.com/olson-sean-k/mitsein"
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
keywords = [
    "collection",
    "iterator",
    "non-empty",
    "one-or-more",
    "slice",
]
categories = [
    "data-structures",
    "no-std",
    "no-std::no-alloc",
    "rust-patterns",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[features]
default = ["std"]
alloc = [
    "itertools/use_alloc",
    "serde/alloc",
]
arrayvec = ["dep:arrayvec"]
indexmap = [
    "dep:indexmap",
    "alloc",
]
itertools = ["dep:itertools"]
rayon = [
    "dep:rayon",
    "indexmap/rayon",
]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "arrayvec/serde",
    "indexmap/serde",
]
std = [
    "alloc",
    "indexmap/std",
    "itertools/use_std",
    "serde/std",
]

[dependencies]

[dependencies.arrayvec]
version = "^0.7.0"
default-features = false
optional = true

[dependencies.indexmap]
version = "^2.7.0"
default-features = false
optional = true

[dependencies.itertools]
version = "^0.13.0"
default-features = false
optional = true

[dependencies.rayon]
version = "^1.10.0"
default-features = false
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_derive]
version = "1.0"
default-features = false
optional = true

[dev-dependencies]
rstest = "^0.21.0"
serde_test = "1.0"
