[package]
name = "mitsein"
version = "0.8.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Strongly typed APIs for non-empty collections, slices, and iterators."
repository = "https://github.com/olson-sean-k/mitsein"
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
keywords = [
    "collection",
    "iterator",
    "non-empty",
    "one-or-more",
    "slice",
]
categories = [
    "data-structures",
    "no-std",
    "no-std::no-alloc",
    "rust-patterns",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[features]
default = ["std"]
alloc = [
    "itertools?/use_alloc",
    "serde?/alloc",
]
arbitrary = [
    "dep:arbitrary",
    "indexmap?/arbitrary",
    "std",
]
arrayvec = [
    "dep:arrayvec",
    "schemars?/arrayvec07",
]
either = ["dep:either"]
indexmap = [
    "dep:indexmap",
    "alloc",
    "schemars?/indexmap2",
]
itertools = [
    "dep:itertools",
    "either",
]
rayon = [
    "dep:rayon",
    "indexmap?/rayon",
    "std",
]
schemars = [
    "dep:schemars",
    "dep:serde_json",
    "alloc",
]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "arrayvec?/serde",
    "indexmap?/serde",
    "smallvec?/serde",
]
smallvec = [
    "dep:smallvec",
    "alloc",
    "schemars?/smallvec1",
]
std = [
    "alloc",
    "either?/std",
    "indexmap?/std",
    "itertools?/use_std",
    "schemars?/std",
    "serde?/std",
    "smallvec?/write",
]

[dependencies]

[dependencies.arbitrary]
version = "^1.4.0"
default-features = false
optional = true

[dependencies.arrayvec]
version = "^0.7.0"
default-features = false
optional = true

[dependencies.either]
version = "^1.15.0"
default-features = false
optional = true

[dependencies.indexmap]
version = "^2.12.0"
default-features = false
optional = true

[dependencies.itertools]
version = "^0.14.0"
default-features = false
optional = true

[dependencies.rayon]
version = "^1.11.0"
default-features = false
optional = true

[dependencies.schemars]
version = "^1.0.0"
default-features = false
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_derive]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_json]
version = "1.0"
default-features = false
optional = true

[dependencies.smallvec]
version = "^1.15.0"
default-features = false
features = [
    "const_generics",
    "union",
]
optional = true

[dev-dependencies]
rstest = "^0.26.0"
serde_test = "1.0"
